[tool.poetry]
name = "iflyface"
version = "0.1.0"
description = ""
authors = ["p0ise <changelf@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
requests = "^2.31.0"
numpy = "^1.26.4"
torchvision = "^0.17.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
