[tool.poetry]
name = "iflyface"
version = "0.1.0"
description = ""
authors = ["p0ise <changelf@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
requests = "^2.31.0"
flask-cors = "^4.0.0"
flask-socketio = "^5.3.6"
opencv-python = "^4.9.0.80"
facenet-pytorch = "^2.5.3"
websocket-client = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
